<resources>
    <string name="app_name">Embedded</string>
    <string name="store">進貨</string>
    <string name="get">取貨</string>
    <string name="check">檢視</string>
    <string name="name">產品名稱</string>
    <string name="content">數量</string>
    <string name="create_btn">新增物品</string>
    <string name="tint_name">物品名稱</string>
    <string name="check_btn">確認</string>
    <string name="cancel_btn">取消</string>
</resources>
