<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/product_image"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_weight="2"
        app:srcCompat="@mipmap/img_test" />

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="221dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:id="@+id/product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:text="@string/name"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/produvt_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="30sp"
            android:text="@string/content" />
        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/get_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/get" />
            <Button
                android:id="@+id/store_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/store"
                android:textSize="20sp"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>