<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:orientation="vertical"
    >


    <ImageView
        android:id="@+id/create_img"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        app:srcCompat="@mipmap/img_test" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="80dp"
        android:layout_width="match_parent"
        android:gravity="center">

        <TextView
            android:id="@+id/create_txt"
            android:layout_width="83dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tint_name"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/create_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text"
            android:textAlignment="center"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="80dp"
        android:layout_width="match_parent"
        android:gravity="center">

        <Button
            android:id="@+id/create_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/check_btn" />

        <Button
            android:id="@+id/create_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel_btn"
            android:textAlignment="center"/>
    </LinearLayout>
</LinearLayout>